--- a/FINAL/game/index.html
+++ b/FINAL/game/index.html
@@ -25,7 +25,7 @@
         <nav>
             <ul class="flex-wrap">
                 <li class="buttons">
-                    <a id="help-button" class="button">Help</a>
+                    <a id="help-button" class="button hover">Help</a>
                     <div id="help-modal" class="help-modal">
                         <div class="help-content">
                             <span class="close">&times;</span>
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                 <li class="buttons">
-                    <a id="instruction-button" class="button">Instructions</a>
+                    <a id="instruction-button" class="button hover">Instructions</a>
                     <div id="instruction-modal" class="instruction-modal">
                         <div class="instruction-content">
                             <span class="close">&times;</span>
@@ -60,7 +60,7 @@
                 </li>
                 </li>
                 <li class="buttons">
-                    <a class="button" href="">Exit</a>
+                    <a class="button hover" href="">Exit</a>
                 </li>
             </ul>
         </nav>
@@ -78,21 +78,22 @@
             </section>
             <section class="box">
                 <div class="icao-buttons">
-                    <button type="button" class="icao-button" style="margin-bottom: 0.5rem">-----------Icao + airport-----------</button>
-                    <button type="button" class="icao-button" style="margin-bottom: 0.5rem">-----------Icao + airport-----------</button>
-                    <button type="button" class="icao-button" style="margin-bottom: 0.5rem">-----------Icao + airport-----------</button>
-                    <button type="button" class="icao-button" style="margin-bottom: 0.5rem">-----------Icao + airport-----------</button>
-                    <button type="button" class="icao-button">-----------Icao + airport-----------</button>
+                    <button type="button" class="icao-button hover" style="margin-bottom: 0.5rem">-----------Icao + airport-----------</button>
+                    <button type="button" class="icao-button hover" style="margin-bottom: 0.5rem">-----------Icao + airport-----------</button>
+                    <button type="button" class="icao-button hover" style="margin-bottom: 0.5rem">-----------Icao + airport-----------</button>
+                    <button type="button" class="icao-button hover" style="margin-bottom: 0.5rem">-----------Icao + airport-----------</button>
+                    <button type="button" class="icao-button hover">-----------Icao + airport-----------</button>
                 </div>
                 <div class="work-button">
-                    <button type="button" class="work" id="work-button">
+                    <button type="button" class="work hover" id="work-button">
                         <h3>Stay + work</h3>
                     </button>
                     <div id="work-modal" class="work-modal">
                         <div class="work-content">
                             <span class="close">&times;</span>
                             <div class="stay-to-work">
-                                <p>You could not afford to fly to your next location... You need to work and earn some money!</p>
+                                <p>You could not afford to fly to your next location... You need to work and earn some money!<br>
+                                There are few places looking for help. If you choose to work and stay at the airport, ONE round will be used.</p>
                             </div>
                             <section class="work-box">
                                 <div>
