--- a/FINAL/game/index.html
+++ b/FINAL/game/index.html
@@ -25,13 +25,23 @@
         <nav>
             <ul class="flex-wrap">
                 <li class="buttons">
-                    <a id="help-button" class="button hover">Help</a>
-                    <div id="help-modal" class="help-modal">
-                        <div class="help-content">
+                    <a id="personal-button" class="button hover">Personal</a>
+                    <div id="personal-modal" class="personal-modal">
+                        <div class="personal-content">
                             <span class="close">&times;</span>
                             <p>some text in the modal</p>
                         </div>
                     </div>
+                </li>
+                <li class="buttons">
+                    <a id="leader-button" class="button hover">Leaderboard</a>
+                    <div id="leader-modal" class="leader-modal">
+                        <div class="leader-content">
+                            <span class="close">&times;</span>
+                            <p>some text in the modal</p>
+                        </div>
+                    </div>
+                </li>
                 <li class="buttons">
                     <a id="instruction-button" class="button hover">Instructions</a>
                     <div id="instruction-modal" class="instruction-modal">
@@ -58,6 +68,14 @@
                         </div>
                     </div>
                 </li>
+                <li class="buttons">
+                    <a id="help-button" class="button hover">Help</a>
+                    <div id="help-modal" class="help-modal">
+                        <div class="help-content">
+                            <span class="close">&times;</span>
+                            <p>some text in the modal</p>
+                        </div>
+                    </div>
                 </li>
                 <li class="buttons">
                     <a class="button hover" href="">Exit</a>
