--- a/FINAL/login.html
+++ b/FINAL/login.html
@@ -16,7 +16,7 @@
           name="username"
           type="text"
           placeholder="Username"
-          maxlength="10"
+          maxlength="30"
         />
         <input
           id="query-pass"
@@ -31,7 +31,7 @@
         </div>
         <div class="logSubmit">
           <input class="login" type="submit" value="LOGIN" />
-          <input class="register" type="submit" value="REGISTER" />
+          <input class="register" type="submit" value="REGISTER" onclick="checkPin()" />
         </div>
       </form>
       <div class="result"></div>
