--- a/FINAL/login.html
+++ b/FINAL/login.html
@@ -30,8 +30,8 @@
           <input type="checkbox" onclick="hideFunction()"/>Show password
         </div>
         <div class="logSubmit">
-          <input class="login" type="submit" value="LOGIN" onclick="checkPin()" />
-          <input class="register" type="submit" value="REGISTER" onclick="checkPin()" />
+          <input class="login" type="submit" value="LOGIN" onclick="switchToGame()" />
+          <input class="register" type="submit" value="REGISTER" onclick="" />
         </div>
       </form>
       <div class="result"></div>
