--- a/FINAL/game/index.html
+++ b/FINAL/game/index.html
@@ -73,7 +73,20 @@
                     <div id="help-modal" class="help-modal">
                         <div class="help-content">
                             <span class="close">&times;</span>
-                            <p>some text in the modal</p>
+                            <section class="box">
+                                <div>
+                                    <button type="button" class="help-menu-button">EXIT</button>
+                                    <button type="button" class="help-menu-button">INSTRUCTIONS</button>
+                                    <button type="button" class="help-menu-button">LEADERBOARD</button>
+                                    <button type="button" class="help-menu-button">PERSONAL</button>
+                                </div>
+                                <div class="help-menu-content">
+                                    <p>Exits the game. Always available. If you click EXIT, the game will end.</p>
+                                    <p>Displays the rules of the game. You can click and view the INSTRUCTIONS during the game.</p>
+                                    <p>Displays top 10 scores.</p>
+                                    <p>Displays your own previous scores.</p>
+                                </div>
+                            </section>
                         </div>
                     </div>
                 </li>
