--- a/FINAL/tutorial/index.html
+++ b/FINAL/tutorial/index.html
@@ -114,7 +114,7 @@
         <div class="elements">
           <section class="hint">
             <header>
-              <h3>Hint for your next location:</h3>
+              <h3>Tutorial instructions:</h3>
             </header>
             <p>
               <span id="next-hint"></span>
@@ -156,7 +156,7 @@
             </div>
             <div class="work-button">
               <button type="button" class="work hover" id="work-button">
-                <h3>Stay + work</h3>
+                <h3>Work</h3>
               </button>
               <div id="work-modal" class="work-modal">
                 <div class="work-content">
