--- a/FINAL/game/index.html
+++ b/FINAL/game/index.html
@@ -73,18 +73,23 @@
                     <div id="help-modal" class="help-modal">
                         <div class="help-content">
                             <span class="close">&times;</span>
-                            <section class="box">
-                                <div>
-                                    <button type="button" class="help-menu-button">EXIT</button>
+                            <section style="margin-top: 1rem">
+                                <div class="help-menu-content">
                                     <button type="button" class="help-menu-button">INSTRUCTIONS</button>
-                                    <button type="button" class="help-menu-button">LEADERBOARD</button>
-                                    <button type="button" class="help-menu-button">PERSONAL</button>
+                                        <p>Displays the rules of the game. You can click and view the INSTRUCTIONS during the game.</p>
                                 </div>
                                 <div class="help-menu-content">
-                                    <p>Exits the game. Always available. If you click EXIT, the game will end.</p>
-                                    <p>Displays the rules of the game. You can click and view the INSTRUCTIONS during the game.</p>
-                                    <p>Displays top 10 scores.</p>
-                                    <p>Displays your own previous scores.</p>
+                                    <button type="button" class="help-menu-button">LEADERBOARD</button>
+                                        <p>Displays top 10 scores.</p>
+                                </div>
+                                <div class="help-menu-content">
+                                    <button type="button" class="help-menu-button">PERSONAL</button>
+                                        <p>Displays your own previous scores.</p>
+                                </div>
+                                <div class="help-menu-content">
+                                    <button type="button" class="help-menu-button">EXIT</button>
+                                        <p>Exits the game. If you click EXIT, the game will end.<br>
+                                            You can go back to view the tutorial or log in with a different user.</p>
                                 </div>
                             </section>
                         </div>
@@ -117,7 +122,7 @@
                 </div>
                 <div class="work-button">
                     <button type="button" class="work hover" id="work-button">
-                        <h3>Stay + work</h3>
+                        <h3>Work</h3>
                     </button>
                     <div id="work-modal" class="work-modal">
                         <div class="work-content">
