--- a/FINAL/game/index.html
+++ b/FINAL/game/index.html
@@ -47,7 +47,7 @@
                     <div id="instruction-modal" class="instruction-modal">
                         <div class="instruction-content">
                             <span class="close">&times;</span>
-                            <p>Welcome to Chase The Rat!<br><br><em>This guide is not required, but may help you understand the game.</em><br><br>
+                            <p style="text-align: center">Welcome to Chase The Rat!<br><br><em>This guide is not required, but may help you understand the game.</em><br><br>
                                 You'll need to enter an existing username and a PIN-code to play with your user OR<br>
                                 you can create new username and a PIN-code.<br><br>
                                 In this game you'll travel between different airports, trying to find the Rat who owes you money.<br>
