--- a/FINAL/game/index.html
+++ b/FINAL/game/index.html
@@ -29,7 +29,51 @@
                     <div id="personal-modal" class="personal-modal">
                         <div class="personal-content">
                             <span class="close">&times;</span>
-                            <p>some text in the modal</p>
+                            <section class="personal-scores">
+                                <h3>TOP 10 PERSONAL SCORES:</h3>
+                                <table id="your-personal-scores">
+                                    <tr>
+                                        <td>1.</td>
+                                        <td class="score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2.</td>
+                                        <td class="score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>3.</td>
+                                        <td class="score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>4.</td>
+                                        <td class="score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>5.</td>
+                                        <td class="score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>6.</td>
+                                        <td class="score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>7.</td>
+                                        <td class="score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>8.</td>
+                                        <td class="score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>9.</td>
+                                        <td class="score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>10.</td>
+                                        <td class="score"></td>
+                                    </tr>
+                                </table>
+                            </section>
                         </div>
                     </div>
                 </li>
@@ -38,7 +82,61 @@
                     <div id="leader-modal" class="leader-modal">
                         <div class="leader-content">
                             <span class="close">&times;</span>
-                            <p>some text in the modal</p>
+                            <section class="leader-scores">
+                                <h3>TOP 10 HIGH SCORES:</h3>
+                                <table id="leader-board-scores">
+                                    <tr>
+                                        <td>1.</td>
+                                        <td class="user-name"></td>
+                                        <td class="top-score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2.</td>
+                                        <td class="user-name"></td>
+                                        <td class="top-score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>3.</td>
+                                        <td class="user-name"></td>
+                                        <td class="top-score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>4.</td>
+                                        <td class="user-name"></td>
+                                        <td class="top-score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>5.</td>
+                                        <td class="user-name"></td>
+                                        <td class="top-score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>6.</td>
+                                        <td class="user-name"></td>
+                                        <td class="top-score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>7.</td>
+                                        <td class="user-name"></td>
+                                        <td class="top-score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>8.</td>
+                                        <td class="user-name"></td>
+                                        <td class="top-score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>9.</td>
+                                        <td class="user-name"></td>
+                                        <td class="top-score"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>10.</td>
+                                        <td class="user-name"></td>
+                                        <td class="top-score"></td>
+                                    </tr>
+                                </table>
+                            </section>
                         </div>
                     </div>
                 </li>
