--- a/FINAL/tutorial/index.html
+++ b/FINAL/tutorial/index.html
@@ -104,7 +104,7 @@
               </div>
             </li>
             <li class="buttons">
-              <a class="button hover" href="">Exit</a>
+              <a class="button exit hover" onclick="history.back()">Exit</a>
             </li>
           </ul>
         </nav>
