--- a/FINAL/game/index.html
+++ b/FINAL/game/index.html
@@ -252,6 +252,9 @@
                                 <div class="selected-job">
                                     <p><span id="selected"></span></p>
                                 </div>
+                                <div class="continue">
+                                    <button type="button" id="continue">CONTINUE</button>
+                                </div>
                             </section>
                         </div>
                     </div>
