--- a/FINAL/login.html
+++ b/FINAL/login.html
@@ -11,7 +11,7 @@
     <header></header>
     <main class="loginMain">
       <form class="loginForm">
-          <div id="messageBox" class="messageBox">Please login</div>
+        <div id="messageBox" class="messageBox">Please login</div>
         <input
           id="query-user"
           name="username"
@@ -19,7 +19,8 @@
           placeholder="Username"
           maxlength="30"
         />
-        <input id="query-pass"
+        <input
+          id="query-pass"
           name="password"
           type="password"
           placeholder="4-digit PIN"
@@ -27,17 +28,19 @@
           maxlength="4"
         />
         <div class="hidePass">
-          <input type="checkbox" onclick="hideFunction()"/>Show password
+          <input type="checkbox" onclick="hideFunction()" />Show password
         </div>
         <div class="logSubmit">
-          <input class="login" type="submit" value="LOGIN" onclick="loginToGame()"/>
-          <input class="register" type="submit" value="REGISTER" onclick="registerAccount()"/>
+          <input class="login" type="submit" value="LOGIN" />
+          <input class="register" type="submit" value="REGISTER" />
         </div>
       </form>
       <div class="result"></div>
     </main>
     <div class="exitBtn">
-      <a href="index.html"><button class="button-85" role="button">RETURN</button></a>
+      <a href="index.html"
+        ><button class="button-85" role="button">RETURN</button></a
+      >
     </div>
   </body>
 </html>
