--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -66,7 +66,7 @@
         <div id="btn_container" class="btn_container">
             <a href="login.html"><img class="pad" src="IMG/gamepad2.jpg" alt="login image"/></a>
             <a><img class="quest" src="IMG/question2.jpg" alt="instructions img" onClick="openInstrPop()"/></a>
-            <a><img class="hands" src="IMG/hands2.jpg" alt="tutorial image"/></a>
+            <a href="tutorial/index.html"><img class="hands" src="IMG/hands2.jpg" alt="tutorial image"/></a>
         </div>
     </main>
 </div>
