--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -25,11 +25,11 @@
         <div class="aboutPop"
              id="aboutPop">
             <h2>What is this all about?</h2>
-            <p>"Chase The Rat"© or "Velkajahti" is a game developed by a small indie developer studio consisting of
+            <p>"Chase The Rat"© or "Velkajahti" is a game developed by a small indie studio consisting of
              four first year IT students based in Metropolia University of Applied Sciences.<br><br>
 
-            It all started from an idea in early fall when four ambitious students embarked on a journey to obtain a high
-             paying job. Someone had to lift the cat on the table... Anyways there will be plenty more where this came from. Stay tuned!
+            It all started from an idea in early fall when four ambitious students embarked on a journey towards
+                an engineering degree. Anyway, there will be plenty more where this came from. Stay tuned!
             <br><br></p>
             <button class="button-61"
                     role="button"
@@ -39,7 +39,7 @@
 
         <div class="instructionsPop"
              id="instructionsPop">
-            <p>Welcome to Chase The Rat!<br><br><em>This guide is not required, but may help you understand the game.</em><br><br>
+            <p>Welcome to <em>Chase The Rat</em>!<br><br><em>This guide is not required, but may help you understand the game.</em><br><br>
                                 You'll need to enter an existing username and a PIN-code to play with your user OR<br>
                                 you can create new username and a PIN-code.<br><br>
                                 In this game you'll travel between different airports, trying to find the Rat who owes you money.<br>
@@ -64,9 +64,9 @@
             </button>
         </div>
         <div id="btn_container" class="btn_container">
-            <a href="login.html"><img class="pad" src="IMG/gamepad2.jpg" alt="login image"/></a>
-            <a><img class="quest" src="IMG/question2.jpg" alt="instructions img" onClick="openInstrPop()"/></a>
-            <a><img class="hands" src="IMG/hands2.jpg" alt="tutorial image"/></a>
+            <a href="login.html"><img class="pad" src="IMG/gamepad2.jpg" alt="login page link"/></a>
+            <a><img class="quest" src="IMG/questionHD.jpg" alt="instructions link" onClick="openInstrPop()"/></a>
+            <a href="tutorial/index.html"><img class="hands" src="IMG/hands2.jpg" alt="tutorial page link"/></a>
         </div>
     </main>
 </div>
