--- a/FINAL/game/index.html
+++ b/FINAL/game/index.html
@@ -405,7 +405,7 @@
                 >
               </li>
               <li>
-                <a type="button" id="reset" href="">RESET</a>
+                <a type="button" id="reset">RESET</a>
               </li>
             </ul>
           </div>
