--- a/FINAL/game/index.html
+++ b/FINAL/game/index.html
@@ -383,10 +383,6 @@
             <div id="map"></div>
           </section>
         </div>
-        <div>
-          <button type="button" class="test-button">TEST</button>
-          <button type="button" class="test-button2">2 TEST</button>
-        </div>
         <div id="winner-modal" class="winner-modal">
           <div class="winner-content">
             <span class="close">&times;</span>
@@ -426,7 +422,7 @@
                 >
               </li>
               <li>
-                <a type="button" id="reset" href="">RESET</a>
+                <a type="button" id="reset">RESET</a>
               </li>
             </ul>
           </div>
