--- a/FINAL/game/index.html
+++ b/FINAL/game/index.html
@@ -410,7 +410,7 @@
           <div class="loser-content">
             <span class="close">&times;</span>
             <h1 class="game-end">You did not find the rat... YOU LOST!</h1>
-            <p>Click RESET to play again or EXIT to go back to log in.</p>
+            <p>Press EXIT to return to the front page.</p>
             <ul class="play-again">
               <li>
                 <a
