--- a/FINAL/game/index.html
+++ b/FINAL/game/index.html
@@ -385,11 +385,10 @@
         </div>
         <div id="winner-modal" class="winner-modal">
           <div class="winner-content">
-            <span class="close">&times;</span>
             <h1 class="game-end">Congratulations! YOU WON!</h1>
             <p class="your-points">YOUR POINTS:<span></span></p>
             <br />
-            <p>Click RESET to play again or EXIT to go back to log in.</p>
+            <p>Press EXIT to return to the front page.</p>
             <ul class="play-again">
               <li>
                 <a
@@ -400,15 +399,11 @@
                   >EXIT</a
                 >
               </li>
-              <li>
-                <a type="button" id="reset">RESET</a>
-              </li>
             </ul>
           </div>
         </div>
         <div id="loser-modal" class="loser-modal">
           <div class="loser-content">
-            <span class="close">&times;</span>
             <h1 class="game-end">You did not find the rat... YOU LOST!</h1>
             <p>Press EXIT to return to the front page.</p>
             <ul class="play-again">
