--- a/FINAL/game/index.html
+++ b/FINAL/game/index.html
@@ -32,49 +32,8 @@
                 <div class="personal-content">
                   <span class="close">&times;</span>
                   <section class="personal-scores">
-                    <h3>TOP 10 PERSONAL SCORES:</h3>
-                    <table id="your-personal-scores">
-                      <tr>
-                        <td>1.</td>
-                        <td class="score"></td>
-                      </tr>
-                      <tr>
-                        <td>2.</td>
-                        <td class="score"></td>
-                      </tr>
-                      <tr>
-                        <td>3.</td>
-                        <td class="score"></td>
-                      </tr>
-                      <tr>
-                        <td>4.</td>
-                        <td class="score"></td>
-                      </tr>
-                      <tr>
-                        <td>5.</td>
-                        <td class="score"></td>
-                      </tr>
-                      <tr>
-                        <td>6.</td>
-                        <td class="score"></td>
-                      </tr>
-                      <tr>
-                        <td>7.</td>
-                        <td class="score"></td>
-                      </tr>
-                      <tr>
-                        <td>8.</td>
-                        <td class="score"></td>
-                      </tr>
-                      <tr>
-                        <td>9.</td>
-                        <td class="score"></td>
-                      </tr>
-                      <tr>
-                        <td>10.</td>
-                        <td class="score"></td>
-                      </tr>
-                    </table>
+                    <h3>BEST PERSONAL SCORE:</h3>
+                      <p id="your-personal-scores"><span class="score"></span> POINTS</p>
                   </section>
                 </div>
               </div>
@@ -217,7 +176,7 @@
                       <button type="button" class="help-menu-button">
                         PERSONAL
                       </button>
-                      <p>Displays your own previous scores.</p>
+                      <p>Displays your best score.</p>
                     </div>
                     <div class="help-menu-content">
                       <button type="button" class="help-menu-button">
